--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
     "js-alert": "^1.0.4",
+    "method-override": "^3.0.0",
     "moment": "^2.25.3",
     "mongoose": "^5.9.12",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "popup": "0.0.3",
-    "popups": "^1.1.3"
+    "popups": "^1.1.3",
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
