--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "passport-local-mongoose": "^6.0.1",
     "popup": "0.0.3",
     "popups": "^1.1.3",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
